# actix_web_react_starter

./: README.md
client/: .eslintcache  package.json
client/src/: App.tsx  index.tsx  types.ts
client/src/api/: apiClient.ts  auth.ts  posts.ts  users.ts
client/src/components/: header.tsx
client/src/components/atoms/: btn.tsx  button.tsx
client/src/components/molecules/: alert.tsx  snackbar.tsx
client/src/components/organisms/: drawer.tsx  drwr.tsx  header.tsx
client/src/pages/: articles.tsx  home.tsx  login.tsx  post.tsx  posts.tsx  signup.tsx  top.tsx
client/src/store/: rootReducer.ts
client/src/store/modules/: alertModule.ts  loadingModule.ts  snackbarModule.ts  userModule.ts
client/src/types/: postType.ts  userType.ts
server/: .env.example  .gitignore  Cargo.toml  log4rs.yml
server/migrations/2021-02-02-135336_init/: up.sql
server/migrations/2021-02-16-125153_posts/: up.sql
server/src/: main.rs  schema.rs  util.rs
server/src/api/: auth.rs  posts.rs  user.rs  users.rs
server/src/model/: mod.rs  post.rs  user.rs
