[package]
name = "server"
version = "0.1.0"
authors = ["matsuno.shingo <devmevius3mg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-identity = "0.3.1"
actix-rt = "1.1.1"
actix-web = "3.3.2"
chrono = "0.4.19"
rand = "0.8.3"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
