[package]
name = "server"
version = "0.1.0"
authors = ["matsuno.shingo <devmevius3mg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-identity = "0.3.1"
actix-rt = "1.1.1"
actix-web = "3.3.2"
chrono = "0.4.19"
rand = "0.8.3"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
time = "0.2.25"

derive_more = "0.99.0"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3.1"
r2d2 = "0.8"
rust-argon2 = "0.8"
lazy_static = "1.4.0"
sparkpost = "0.5.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
log4rs = "1.0.0"
log = "0.4.8"